--- a/index.html
+++ b/index.html
@@ -116,26 +116,26 @@
         </table>
     </section>
 
-    <section id="contact" class="section contact">
+    <section id="kontak" class="section kontak">
         <div class="container">
             <h2 class="section-title">Kontak</h2>
-            <div class="contact-container">
-                <div class="contact-info">
-                    <div class="contact-item">
+            <div class="kontak-container">
+                <div class="kontak-info">
+                    <div class="kontak-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
                             <p>hanung@example.com</p>
                         </div>
                     </div>
-                    <div class="contact-item">
+                    <div class="kontak-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
                             <p>+62 812 3456 7890</p>
                         </div>
                     </div>
-                    <div class="contact-item">
+                    <div class="kontak-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Location</h3>
@@ -143,20 +143,20 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="kontak-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Your Name" required>
+                        <input type="text" placeholder="Nama" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
+                        <input type="email" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" placeholder="Subject">
+                        <input type="text" placeholder="Subjek">
                     </div>
                     <div class="form-group">
-                        <textarea placeholder="Your Message" required></textarea>
+                        <textarea placeholder="Pesan anda" required></textarea>
                     </div>
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btn">Kirim Pesan</button>
                 </form>
             </div>
         </div>
